--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  box-sizing: border-box;
+}
+.navbar{
+  height: 70px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  font-size: 1.3em;
+  font-weight: 800;
+  background-color: rgb(88, 88, 88);
+}
+.grey{
+  color: rgb(255, 255, 255);
+}
+.main{
+  width: 700px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+input[type="search"] {
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+  margin-bottom: 55px;
+}
